--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -7,7 +7,9 @@ itemGroup.mubble_costumes_tab=costum Mubble
 tile.vanadium_block.name=cube joli et mjenta
 tile.vanadium_ore.name=minrai cool et mjenta
 tile.red_bricks.name=brik rouj
+//tile.red_bricks_stairs.name=<newline>
 tile.white_bricks.name=brik blanch
+//tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=blunit
 tile.polished_blunite.name=blunit tou bo tou propr
 tile.carbonite.name=crbonit
@@ -67,7 +69,9 @@ tile.purple_candy_cane_pillar.name=piler de bobon de novel sauf que c pourpr
 
 tile.iron_scaffolding.name=chafaudaj an faire
 tile.purple_bricks.name=brik volete
+//tile.purple_bricks_stairs.name=<newline>
 tile.cyan_bricks.name=brik sian
+//tile.cyan_bricks_stairs.name=<newline>
 tile.elder_pebbles.name=vieu galai come su la plaj de diepp
 tile.space_matter.name=matiare martiéne
 
@@ -106,6 +110,8 @@ item.super_crown.name=couraune bien supair coule.
 item.bandana.name=banade
 
 item.smash_ball.name=boul smash bros
+
+//item.annoying_dog.name=<newline>
 
 item.ralsei_hat.name=chapo de ralsi
 
