Added Blunite and Carbonite Stairs

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=Rote Ziegelsteine
 tile.white_bricks.name=Weiße Ziegelsteine
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=Blunite
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Polierter Blunite
 tile.carbonite.name=Carbonite
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Polierter Carbonite
 tile.footblock.name=Fußblock
 tile.white_cloud_block.name=Weiße Wolkenblock
