--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -11,8 +11,10 @@ tile.red_bricks_stairs.name=Red Bricks Stairs
 tile.white_bricks.name=White Bricks
 tile.white_bricks_stairs.name=White Bricks Stairs
 tile.blunite.name=Blunite
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Polished Blunite
 tile.carbonite.name=Carbonite
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Polished Carbonite
 tile.footblock.name=Footblock
 tile.white_cloud_block.name=White Cloud Block
