--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=sʞɔᴉɹᗺ pǝᴚ
 tile.white_bricks.name=sʞɔᴉɹᗺ ǝʇᴉɥM
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=ǝʇᴉunlᗺ
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=ǝʇᴉunlᗺ pǝɥsᴉloԀ
 tile.carbonite.name=ǝʇᴉuoqɹɐƆ
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=ǝʇᴉuoqɹɐƆ pǝɥsᴉloԀ
 tile.footblock.name=ʞɔolqʇooℲ
 tile.white_cloud_block.name=ʞɔolq pnolƆ ǝʇᴉɥM
