--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=Ladrillos rojos
 tile.white_bricks.name=Ladrillos blancos
 //tile.white_bricks_stairs.name=Escalera de Ladrillos blancos
 tile.blunite.name=Blunita
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunita pulida
 tile.carbonite.name=Carbonita
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Carbonita pulida
 tile.footblock.name=Futbloque
 tile.white_cloud_block.name=Bloque de nube blanca
