--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=brik rouj
 tile.white_bricks.name=brik blanch
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=blunit
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=blunit tou bo tou propr
 tile.carbonite.name=crbonit
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=cobnite bo
 tile.footblock.name=blok foutbol
 //tile.white_cloud_block.name=<newline>
