--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=Briques rouges
 tile.white_bricks.name=Briques blanches
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=Blunite
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunite poli
 tile.carbonite.name=Carbonite
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Carbonite polie
 tile.footblock.name=Bloc de foot
 //tile.white_cloud_block.name=<newline>
