--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=Rode bakstenen
 tile.white_bricks.name=Witte bakstenen
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=Blunite
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Gepolijst blunite
 tile.carbonite.name=Carbonite
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Gepolijst carbonite
 tile.footblock.name=Voetblok
 tile.white_cloud_block.name=Wittewolkblok
