--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=紅色磚塊
 tile.white_bricks.name=白色磚塊
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=藍岩
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=磨製藍岩
 tile.carbonite.name=碳岩
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=磨製碳岩
 tile.footblock.name=足球塊
 //tile.white_cloud_block.name=<newline>
