--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=bloo brik
 tile.white_bricks.name=cool brik
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=moon-a-bloc
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=pretteh monnbloc
 tile.carbonite.name=blac stoneh
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=pretteh blac ston
 tile.footblock.name=futbloc
 //tile.white_cloud_block.name=<newline>
