--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -11,8 +11,10 @@ tile.red_bricks.name=红色砖块
 tile.white_bricks.name=白色砖块
 //tile.white_bricks_stairs.name=<newline>
 tile.blunite.name=蓝岩
+//tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=磨制蓝岩
 tile.carbonite.name=碳岩
+//tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=磨制碳岩
 tile.footblock.name=足球块
 //tile.white_cloud_block.name=<newline>
