bricks_stairs -> brick_stairs

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Mubble Kostüme
 tile.vanadium_block.name=Vanadium-Block
 tile.vanadium_ore.name=Vanadium-Erz
 tile.red_bricks.name=Rote Ziegelsteine
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=Weiße Ziegelsteine
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Polierter Blunite
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=Einfarbiger Tetris-Gerüst
 tile.vampire_stone.name=Vampir-Stein
 tile.medusa_stone.name=Medusa's Stein
 tile.medusa_bricks.name=Medusa's Ziegelsteine
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=Blauer Zuckerstangensäule
 tile.green_candy_cane_pillar.name=Grüner Zuckerstangensäule
 tile.yellow_candy_cane_pillar.name=Gelber Zuckerstangensäule
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=Lila Zuckerstangensäule
 
 tile.iron_scaffolding.name=Eisen Gerüst
 tile.purple_bricks.name=Lila Ziegelsteine
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=Türkiser Ziegelsteine
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 
