--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=sǝɯnʇsoƆ ǝlqqnW
 tile.vanadium_block.name=ɯnᴉpɐuɐΛ ɟo ʞɔolᗺ
 tile.vanadium_ore.name=ǝɹO ɯnᴉpɐuɐΛ
 tile.red_bricks.name=sʞɔᴉɹᗺ pǝᴚ
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=sʞɔᴉɹᗺ ǝʇᴉɥM
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=ǝʇᴉunlᗺ
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=ǝʇᴉunlᗺ pǝɥsᴉloԀ
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=ƃuᴉploɟɟɐɔS sᴉɹʇǝ┴ ǝɯoɹ
 tile.vampire_stone.name=ǝuoʇS ǝɹᴉdɯɐΛ
 tile.medusa_stone.name=ǝuoʇS s,ɐsnpǝW
 tile.medusa_bricks.name=sʞɔᴉɹq s,ɐsnpǝW
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝnlᗺ
 tile.green_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ uǝǝɹפ
 tile.yellow_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ʍollǝ⅄
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝldɹnԀ
 
 tile.iron_scaffolding.name=ƃuᴉploɟɟɐɔS uoɹI
 tile.purple_bricks.name=sʞɔᴉɹᗺ ǝldɹnԀ
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=sʞɔᴉɹᗺ uɐʎƆ
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=sǝlqqǝԀ ɹǝplƎ
 tile.space_matter.name=ɹǝʇʇɐW ǝɔɐdS
 
