--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Mubble Costumes
 tile.vanadium_block.name=Block of Vanadium
 tile.vanadium_ore.name=Vanadium Ore
 tile.red_bricks.name=Red Bricks
-tile.red_bricks_stairs.name=Red Bricks Stairs
+tile.red_brick_stairs.name=Red Brick Stairs
 tile.white_bricks.name=White Bricks
-tile.white_bricks_stairs.name=White Bricks Stairs
+tile.white_brick_stairs.name=White Brick Stairs
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite Stairs
 tile.polished_blunite.name=Polished Blunite
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=Monochrome Tetris Scaffolding
 tile.vampire_stone.name=Vampire Stone
 tile.medusa_stone.name=Medusa's Stone
 tile.medusa_bricks.name=Medusa's Bricks
-tile.medusa_bricks_stairs.name=Medusa's Bricks Stairs
+tile.medusa_brick_stairs.name=Medusa's Brick Stairs
 tile.blue_candy_cane_pillar.name=Blue Candy Cane Pillar
 tile.green_candy_cane_pillar.name=Green Candy Cane Pillar
 tile.yellow_candy_cane_pillar.name=Yellow Candy Cane Pillar
@@ -71,9 +71,9 @@ tile.scarlet_mushroom.name=Scarlet Mushroom
 
 tile.iron_scaffolding.name=Iron Scaffolding
 tile.purple_bricks.name=Purple Bricks
-tile.purple_bricks_stairs.name=Purple Bricks Stairs
+tile.purple_brick_stairs.name=Purple Brick Stairs
 tile.cyan_bricks.name=Cyan Bricks
-tile.cyan_bricks_stairs.name=Cyan Bricks Stairs
+tile.cyan_brick_stairs.name=Cyan Brick Stairs
 tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 
