--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Trajes de Mubble
 tile.vanadium_block.name=Bloque de vanadio 
 tile.vanadium_ore.name=Mena de vanadio
 tile.red_bricks.name=Ladrillos rojos
-//tile.red_bricks_stairs.name=Escalera de Ladrillos rojos
+//tile.red_brick_stairs.name=Escalera de Ladrillos rojos
 tile.white_bricks.name=Ladrillos blancos
-//tile.white_bricks_stairs.name=Escalera de Ladrillos blancos
+//tile.white_brick_stairs.name=Escalera de Ladrillos blancos
 tile.blunite.name=Blunita
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunita pulida
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=Andamio Tetris monocromático
 tile.vampire_stone.name=Piedra vampiro
 tile.medusa_stone.name=Piedra medusa
 tile.medusa_bricks.name=Ladrillos de medusa
-tile.medusa_bricks_stairs.name=Escalera de ladrillos de Medusa
+tile.medusa_brick_stairs.name=Escalera de ladrillos de Medusa
 tile.blue_candy_cane_pillar.name=Pilar de bastón de caramelo azul
 tile.green_candy_cane_pillar.name=Pilar de bastón de caramelo verde
 tile.yellow_candy_cane_pillar.name=Pilar de bastón de caramelo amarillo
@@ -71,9 +71,9 @@ tile.scarlet_mushroom.name=Champiñón escarlata
 
 tile.iron_scaffolding.name=Andamio de hierro
 tile.purple_bricks.name=Ladrillos morados
-//tile.purple_bricks_stairs.name=Escalera de Ladrillos morados
+//tile.purple_brick_stairs.name=Escalera de Ladrillos morados
 tile.cyan_bricks.name=Ladrillos cian
-//tile.cyan_bricks_stairs.name=Escalera de Ladrillos cian
+//tile.cyan_brick_stairs.name=Escalera de Ladrillos cian
 tile.elder_pebbles.name=Guijarros antiguos
 tile.space_matter.name=Materia espacial
 
