--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=costum Mubble
 tile.vanadium_block.name=cube joli et mjenta
 tile.vanadium_ore.name=minrai cool et mjenta
 tile.red_bricks.name=brik rouj
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=brik blanch
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=blunit
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=blunit tou bo tou propr
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=shafaudag tirtri pa bo c noir et blen c 
 tile.vampire_stone.name=cayou vampir
 tile.medusa_stone.name=cayoue de la madane serpen
 tile.medusa_bricks.name=brik chai madame serpens!
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=piler de bonbon de noel sauf que c ble
 tile.green_candy_cane_pillar.name=pylier de bonbon de noel sof que c ver
 tile.yellow_candy_cane_pillar.name=piler de bonbon de noel sauf que c jonne
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=piler de bobon de novel sauf que c pourpr
 
 tile.iron_scaffolding.name=chafaudaj an faire
 tile.purple_bricks.name=brik volete
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=brik sian
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=vieu galai come su la plaj de diepp
 tile.space_matter.name=matiare martiéne
 
