--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Costumes Mubble
 tile.vanadium_block.name=Bloc de vanadium
 tile.vanadium_ore.name=Minerai de vanadium
 tile.red_bricks.name=Briques rouges
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=Briques blanches
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunite poli
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=Échafaudage Tetris monochrome
 tile.vampire_stone.name=Roche Vampire
 tile.medusa_stone.name=Roche de Méduse
 tile.medusa_bricks.name=Briques de Méduse
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=Piller de sucre d'orge bleu
 tile.green_candy_cane_pillar.name=Piller de sucre d'orge vert
 tile.yellow_candy_cane_pillar.name=Piller de sucre d'orge jaune
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=Piller de sucre d'orge violet
 
 tile.iron_scaffolding.name=Échafaudage en fer
 tile.purple_bricks.name=Briques violettes
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=Briques cyan
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=Anciens galets
 tile.space_matter.name=Matière spatiale
 
