--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Mubble put things on you
 tile.vanadium_block.name=shiny purple cube
 tile.vanadium_ore.name=shiny purple in blox
 tile.red_bricks.name=bloo brik
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=cool brik
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=moon-a-bloc
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=pretteh monnbloc
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=blak & wite tetri zcffolding
 tile.vampire_stone.name=spooky ston
 tile.medusa_stone.name=the stone in the room with the sp0ky girl with snakes on her head
 tile.medusa_bricks.name=the bricks in the room with the sp00ky girl with snakes on her head
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=blue big christmas cane
 tile.green_candy_cane_pillar.name=gren big christmas cane
 tile.yellow_candy_cane_pillar.name=yelou big christmas cane
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=purpl big christmas cane
 
 tile.iron_scaffolding.name=irun zcffolding
 tile.purple_bricks.name=parpal brik
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=nyan briks
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=old pebbL
 tile.space_matter.name=MARTIAN DIRT OoOoOoO
 
