--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=Mubble kostuums
 tile.vanadium_block.name=Vanadiumblok
 tile.vanadium_ore.name=Vanadiumerts
 tile.red_bricks.name=Rode bakstenen
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=Witte bakstenen
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Gepolijst blunite
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=Zwart-wit Tetris steiger
 tile.vampire_stone.name=Vampiersteen
 tile.medusa_stone.name=Medusasteen
 tile.medusa_bricks.name=Medusablokstenen
-tile.medusa_bricks_stairs.name=Medusablokstenen trap
+tile.medusa_brick_stairs.name=Medusablokstenen trap
 tile.blue_candy_cane_pillar.name=Blauwe zuurstokpillaar
 tile.green_candy_cane_pillar.name=Groene zuurstokpillaar
 tile.yellow_candy_cane_pillar.name=Gele zuurstokpillaar
@@ -71,9 +71,9 @@ tile.scarlet_mushroom.name=Scharlake paddenstoel
 
 tile.iron_scaffolding.name=IJzersteiger
 tile.purple_bricks.name=Paarse bakstenen
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=Turquoise bakstenen
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=Oudere keizels
 tile.space_matter.name=Ruimte materie
 
