--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=任天堂領域時裝
 tile.vanadium_block.name=釩塊
 tile.vanadium_ore.name=釩礦石
 tile.red_bricks.name=紅色磚塊
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=白色磚塊
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=藍岩
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=磨製藍岩
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=黑白俄羅斯方塊腳手架
 tile.vampire_stone.name=吸血鬼之石
 tile.medusa_stone.name=美杜莎之石
 tile.medusa_bricks.name=美杜莎磚塊
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=藍色拐杖糖支柱
 tile.green_candy_cane_pillar.name=綠色拐杖糖支柱
 tile.yellow_candy_cane_pillar.name=黃色拐杖糖支柱
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 
 tile.iron_scaffolding.name=鐵腳手架
 tile.purple_bricks.name=紫色磚塊
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=青色磚塊
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=遠古鵝卵石
 tile.space_matter.name=太空物質
 
