--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -7,9 +7,9 @@ itemGroup.mubble_costumes_tab=任天堂领域时装
 tile.vanadium_block.name=钒块
 tile.vanadium_ore.name=钒矿石
 tile.red_bricks.name=红色砖块
-//tile.red_bricks_stairs.name=<newline>
+//tile.red_brick_stairs.name=<newline>
 tile.white_bricks.name=白色砖块
-//tile.white_bricks_stairs.name=<newline>
+//tile.white_brick_stairs.name=<newline>
 tile.blunite.name=蓝岩
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=磨制蓝岩
@@ -60,7 +60,7 @@ tile.monochrome_tetris_scaffolding.name=黑白俄罗斯方块脚手架
 tile.vampire_stone.name=吸血鬼之石
 tile.medusa_stone.name=美杜莎之石
 tile.medusa_bricks.name=美杜莎砖块
-//tile.medusa_bricks_stairs.name=<newline>
+//tile.medusa_brick_stairs.name=<newline>
 tile.blue_candy_cane_pillar.name=蓝色拐杖糖支柱
 tile.green_candy_cane_pillar.name=绿色拐杖糖支柱
 tile.yellow_candy_cane_pillar.name=黄色拐杖糖支柱
@@ -71,9 +71,9 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 
 tile.iron_scaffolding.name=铁脚手架
 tile.purple_bricks.name=紫色砖块
-//tile.purple_bricks_stairs.name=<newline>
+//tile.purple_brick_stairs.name=<newline>
 tile.cyan_bricks.name=青色砖块
-//tile.cyan_bricks_stairs.name=<newline>
+//tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=远古鹅卵石
 tile.space_matter.name=太空物质
 
